10/05/2010 - Changes from 2.10.3 to 2.10.4
  * Start decomposing the bputils monolith.  Broke out of it new libraries
    bpdns, bphttp, bpipc, and platform_utils.
  * Bumped browser whitelist for Safari, Chrome, and IE.
  * Changes related to new internal git server (we still mirror to github).

08/31/2010 - Changes from 2.10.2 to 2.10.3
  * Add bp::paths::getProductTempDirectory(), which gets a "Temp" directory 
    under the top product dir.  Install/uninstall then use this to avoid windows
    issues with running .exe's out of normal tmp dirs.
  * Whitelist browsers and define what capabilities they support via the 
    permissions bundle.
  * Add ability to add new public keys to BrowserPlus.crt via a "publicKeys" 
    entry in permissions bundle.

08/09/2010 - Changes from 2.9.8 to 2.9.9
  * change mime-type scheme so that < 2.9.8 will never be loaded and
    seamless update flow is restored.  

07/30/2010 - Changes from 2.9.7 to 2.9.8
  * modified browserplus.js to block all versions prior to 2.9.7 starting on 
    aug. 8 at midnight

07/30/2010 - Changes from 2.9.6 to 2.9.7
  * 2.9.7 is a clone of 2.9.4 with a new version number, used only to
    address the expiration of our prod certs.  There are no code changes
    (other than browserplus.js) from 2.9.2 to 2.9.7.

07/28/2010 - Changes from 2.9.5 to 2.9.6
  * a new version number

07/27/2010 - Changes from 2.9.4 to 2.9.5
  * Installer logfile may now grow to 512k
  * all temp files placed under user scoped product path to allow platform
    to run in environments where execution of binaries in temp dir is restricted
  * dnd fixes for windows/firefox
  * move browserplus links out of start menu and into control panel on windows

07/22/2010 - Changes from 2.10.1 to 2.10.2
  * fixes for v4 service api back-compatibility
  * changes to facilitate testing of v5 service api
  * Fix Drag-and-Drop on Firefox 3.6.6 on Windows.

07/12/2010 - Changes from 2.10.0 to 2.10.1